--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,11 +6,17 @@ Date: 2017-07-17
 Author: Will Townes
 Maintainer: Will Townes <will.townes@gmail.com>
 Description: Probabilistic dimension reduction for single cell RNA-Seq data.
-    Uses Stan for variational inference.
+  Uses Stan for variational inference.
 URL: https://github.com/willtownes/vamf
 BugReports: https://github.com/willtownes/vamf/issues
 License: GPL-3
 Depends: R (>= 3.0.2), Rcpp (>= 0.12.11), methods
-Imports: rstan (>= 2.15.1), rstantools (>= 1.2.0)
-Suggests:
+Imports: rstan (>= 2.15.1), 
+  rstantools (>= 1.2.0),
+  Matrix (>= 1.2-10),
+  parallel (>= 3.4.0),
+  gdata (>= 2.18.0),
+  stats (>= 3.4.0),
+  utils (>= 3.4.0)
 LinkingTo: StanHeaders (>= 2.15.0.1), rstan (>= 2.15.1), BH (>= 1.62.0.1), Rcpp (>= 0.12.11), RcppEigen (>= 0.3.3.3.0)
+RoxygenNote: 6.0.1
