--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,5 +21,8 @@ Imports: rstan (>= 2.15.1),
 LinkingTo: StanHeaders (>= 2.15.0.1), rstan (>= 2.15.1), BH (>= 1.62.0.1), Rcpp (>= 0.12.11), RcppEigen (>= 0.3.3.3.0)
 RoxygenNote: 6.0.1
 Suggests: knitr,
-    rmarkdown
+    rmarkdown,
+    Rtsne,
+    MASS,
+    ggplot2
 VignetteBuilder: knitr
